--- a/atsiskaitimas/css/main.css
+++ b/atsiskaitimas/css/main.css
@@ -253,7 +253,8 @@ html {
 
 @media screen and (min-width: 1600px) {
   .container__images {
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
